<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BMRFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/textViewBMR"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/textViewBMR"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/linearlayoutVr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textViewBMR"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="67dp">

        <LinearLayout
            android:id="@+id/linearlayoutHr1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <TextView
                android:id="@+id/textViewHeightBMR"
                android:layout_width="40dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:text="@string/textViewHeightBMR"
                android:textAlignment="center"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/editTextHeightBMR"
                android:layout_width="160dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/editTextHeightBMR"
                android:inputType="numberDecimal"
                android:textAlignment="center" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearlayoutHr2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <TextView
                android:id="@+id/textViewWeightBMR"
                android:layout_width="40dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:text="@string/textViewWeightBMR"
                android:textAlignment="center"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/editTextWeightBMR"
                android:layout_width="160dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/editTextWeightBMR"
                android:inputType="numberDecimal"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearlayoutHr3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <TextView
                android:id="@+id/textViewAgeBMR"
                android:layout_width="40dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:text="@string/textViewAgeBMR"
                android:textAlignment="center"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/editTextAgeBMR"
                android:layout_width="160dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/editTextAgeBMR"
                android:inputType="numberDecimal"
                android:textAlignment="center" />
        </LinearLayout>



        <LinearLayout
            android:id="@+id/linearlayoutHr4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <TextView
                android:id="@+id/textViewSexBMR"
                android:layout_width="40dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:text="@string/textViewSexBMR"
                android:textAlignment="center"
                android:textSize="24sp" />

            <CheckBox
                android:id="@+id/checkBoxMale"
                android:layout_width="29dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/checkBoxMale"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/checkBoxFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/checkBoxFemale"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/Linearbutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="vertical"
            android:paddingStart="10dp"
            android:paddingEnd="20dp">

            <Button
                android:id="@+id/buttonBMRcalc"
                style="@android:style/Widget.Holo.Button"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/buttonBMRcalc" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="152dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="391dp">

        <TextView
            android:id="@+id/textViewBMRresult"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="91dp"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textAlignment="center"
            android:textColor="?android:attr/colorFocusedHighlight"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>


</RelativeLayout>